2010-05-29  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #610126
	* expression.cs: Don't use branch optimization for types bigger than
	int.

2010-05-28  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #609088
	* import.cs: Check private modifier correctly.

2010-05-28  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #609049
	* ecore.cs: Don't ignore override methods when looking for base
	member.

2010-05-27  Marek Safar  <marek.safar@gmail.com>

	A fix for bugs #608007, #572540, #566130, #476358

	* generic.cs, linq.cs, expression.cs, statement.cs, cs-parser.jay:
	More tricky refactoring of implicit linq blocks.
	
2010-05-25  Marek Safar  <marek.safar@gmail.com>

	* linq.cs, cs-parser.jay: Keep location for all linq clauses.

2010-05-25  Marek Safar  <marek.safar@gmail.com>

	* context.cs, expression.cs, cs-parser.jay: Don't store current
	block in This expression (it's too early for linq blocks).

2010-05-21  Marek Safar  <marek.safar@gmail.com>

	* expression.cs: Use constrained prefix more broadly to avoid boxing.

2010-05-20  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #591149
	* nullable.cs: Don't double wrap same expression.
	
2010-05-20  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #569827
	* anonymous.cs: Any issued error in probing mode means no match.

2010-05-20  Marek Safar  <marek.safar@gmail.com>

	* expression.cs: Search for base indexer using the closest match
	rule.

2010-05-20  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #572071
	* method.cs: Set override constraints using unexpanded interface
	list.

2010-05-20  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #572071
	* ecore.cs: Include secondary extension method lookup in probing
	mode.

2010-05-19  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #515801
	* typespec.cs (MayBecomeEqualGenericTypes): Recursively check
	type arguments.

2010-05-19  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #515801